# singl-haskell

./: Evaluator.hs  Parser.hs  README.md  Types.hs  singl-haskell.cabal  singl.hs
