Name:           singl-haskell
Version:        0.0
Description:    A reimplementation of Singl in Haskell
License:        GPL
License-file:   LICENSE
Author:         Krzysztof Drewniak
Maintainer:     krzysdrewniak@gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.12

executable singl
  main-is:      singl.hs
  other-modules: Types, Parser, Evaluator
  build-depends: base >= 4 && < 5, parsec >= 3, mtl >= 2
                 , containers >= 0.5
  default-language: Haskell2010
